Improved package scripts

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "devServer": "nodemon ./backend/server.js",
+    "server:dev": "nodemon ./backend/server.js",
     "server": "node ./backend/server.js --prod"
   },
   "eslintConfig": {
